fixed white space that was affecting the header and the footer

--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     flex-wrap: wrap;
+    margin: 0;
  }
 
  
@@ -13,6 +14,7 @@ body {
     justify-content: center;
     height: 100px;
     align-items: center;
+    margin-top: 0;
 }
 
 #note_capture {
